syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "br.com.tony.grpc";

package br.com.tony.grpc;

service CreatePersonService {
  rpc CreatePerson(PersonMessage) returns (PersonResponse);
}

service CreateSubscriberService {
  rpc CreateSubscriber(PersonMessage) returns (EmptyResponse);
}

//  Nome anterior: PersonRequest
//  Nome atual: PersonMessage
message PersonMessage {
  //  Nome anterior: name
  //  Nome atual: person_name
  google.protobuf.StringValue person_name = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue cpf = 3;
}

message PersonResponse {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue cpf = 4;
}

message EmptyResponse {}
