syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "br.com.tony.grpc";

package br.com.tony.grpc;

service CreateSubscriberService {
  rpc CreateSubscriber(PersonRequest) returns (EmptyResponse);
}

message PersonRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue cpf = 3;
}

message EmptyResponse {}
